# typstd

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  main.typ  rustfmt.toml  typst.toml
.github/workflows/: on-push.yml
doc/: main.bib  main.typ  subsection.typ  typst.toml
src/: lib.rs  package.rs  workspace.rs
