[package]
name = "typstd"
version = "0.0.1"
description = "A plain and simple language server for Typst markup language."
authors = ["Daniel Bershatsky <daniel.bershatsky@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://github.com/daskol/typstd"
repository = "https://github.com/daskol/typstd"
edition = "2021"

[[bin]]
name = "typstd"
path = "src/bin/main.rs"

[dependencies]
# Asset management.
fontdb = { version = "0.15", features = ["memmap", "fontconfig"] }

# Asynchronous programming packages.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }

# Command line interface and configuration.
clap = { version = "4", features = ["derive"] }
toml = { version = "0.8" }

# Language server protocol.
tower-lsp = { version = "0.20.0", features = ["proposed"] }

# Logging facility.
log = { version = "0.4" }
structured-logger = { version = "1" }

# Telemetry dependencies.
serde = "1"
serde_json = "1"
opentelemetry = { version = "0.20.0", optional = true }
opentelemetry-otlp = { version = "0.13.0", optional = true }
tracing = "0.1.34"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.21.0", optional = true }

# Typst package support.
dirs = "5"
env_proxy = "0.3"
flate2 = "1"
tar = "0.4"
ureq = "2"

# Typst packages.
comemo = "0.4"
typst = { git = "https://github.com/typst/typst.git", tag = "v0.11.1" }
typst-ide = { git = "https://github.com/typst/typst.git", tag = "v0.11.1" }
typst-pdf = { git = "https://github.com/typst/typst.git", tag = "v0.11.1" }

[features]
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
